--- a/mainapp/templates/mainapp/standalone_account.html
+++ b/mainapp/templates/mainapp/standalone_account.html
@@ -1,17 +1,18 @@
 {% extends 'mainapp/base.html' %}
 {% block title %}Standalone account page{% endblock %}
 {% block body %}
-    <h1>Standalone account page</h1>
-    <p>Address: {{ account.address }}</p>
-    <p>Balance: {{ account.balance }} microAlgos</p>
+  <h1>Standalone account page</h1>
+  <p>Address: {{ account.address }}</p>
+  <p>Created: {{ account.created }}</p>
+  <p>Balance: {{ account.balance }} microAlgos</p>
 
-    {% if messages %}
-        <ul class="messages">
-            {% for message in messages %}
-                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-            {% endfor %}
-        </ul>
-    {% endif %}
+  {% if messages %}
+    <ul class="messages">
+      {% for message in messages %}
+        <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+      {% endfor %}
+    </ul>
+  {% endif %}
 
-    <a href="/transfer-funds/{{ account.address }}/">Transfer funds</a>
+  <a href="/transfer-funds/{{ account.address }}/">Transfer funds</a>
 {% endblock %}
