Added transactions list to account page

--- a/mainapp/static/mainapp/style.css
+++ b/mainapp/static/mainapp/style.css
@@ -38,3 +38,11 @@ ul.errorlist li {
 ul.messages li.success {
     color: green;
 }
+
+table.trx {
+    width:100%;
+}
+
+th {
+    text-align: left;
+}
