--- a/mainapp/templates/mainapp/wallet_account.html
+++ b/mainapp/templates/mainapp/wallet_account.html
@@ -1,19 +1,3 @@
-{% extends 'mainapp/base.html' %}
-{% block title %}Wallet account page{% endblock %}
-{% block body %}
-  <h1>Wallet account page</h1>
-  <p>Wallet: {{ wallet.name }} (ID: {{ wallet.wallet_id }})</p>
-  <p>Address: {{ account.address }}</p>
-  <p>Created: {{ account.created }}</p>
-  <p>Balance: {{ account.balance }} microAlgos</p>
-
-  {% if messages %}
-    <ul class="messages">
-      {% for message in messages %}
-        <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-      {% endfor %}
-    </ul>
-  {% endif %}
-
-  <a href="/transfer-funds/{{ account.address }}/">Transfer funds</a>
-{% endblock %}
+{% extends 'mainapp/base_account.html' %}
+{% block prefix %}Wallet{% endblock prefix %}
+{% block start %}<p>Wallet: {{ wallet.name }} (ID: {{ wallet.wallet_id }})</p>{% endblock start %}
