--- a/mainapp/templates/mainapp/base_account.html
+++ b/mainapp/templates/mainapp/base_account.html
@@ -5,7 +5,6 @@
   {% block start %}{% endblock start %}
   <p>Address: {{ account.address }}</p>
   <p>Created: {{ account.created }}</p>
-  <p>Balance: {{ account.balance }} microAlgos</p>
 
   {% if messages %}
     <ul class="messages">
@@ -14,11 +13,15 @@
       {% endfor %}
     </ul>
   {% endif %}
-
+  <br>
+  <a href="/create-asset/{{ account.address }}/">Create asset</a>
+  <hr>
+  <p>Balance: {{ account.balance }} microAlgos</p>
+  <br>
   <a href="/transfer-funds/{{ account.address }}/">Transfer funds</a>
 
   <h2>Transactions</h2>
-  <table class="trx">
+  <table class="full-width">
   <tr>
     <th>Round</th>
     <th>Sender</th>
