--- a/mainapp/templates/mainapp/assets.html
+++ b/mainapp/templates/mainapp/assets.html
@@ -1,38 +1,34 @@
 {% extends 'mainapp/base.html' %}
 {% block title %}Assets{% endblock %}
 {% block body %}
-  {% if assets %}
   <h1>Assets list</h1>
+  {% if assets %}
   <table class="full-width">
   <tr>
-    <th>ID</th>
+    <th>ID/Frozen</th>
+    <th>Name/Unit</th>
+    <th>Total/Decimals</th>
+    <th>Url/Metadata</th>
     <th>Creator</th>
-    <th>Name</th>
-    <th>Unit</th>
-    <th>Total</th>
-    <th>Decimals</th>
-    <th>Frozen</th>
-    <th>Url</th>
-    <th>Metadata</th>
-    <th>Manager</th>
-    <th>Reserve</th>
-    <th>Freeze</th>
-    <th>Clawback</th>
+    <th>Manager/Reserve</th>
+    <th>Freeze/Clawback</th>
   </tr>
   {% for asset in assets %}
   <tr>
     <td>{{ asset.asset_id }}</td>
-    <td>{{ asset.creator }}</td>
     <td>{{ asset.name }}</td>
-    <td>{{ asset.unit }}</td>
     <td>{{ asset.total }}</td>
-    <td>{{ asset.decimals }}</td>
-    <td>{{ asset.frozen }}</td>
     <td>{{ asset.url }}</td>
-    <td>{{ asset.metadata }}</td>
+    <td rowspan="2">{{ asset.creator }}</td>
     <td>{{ asset.manager }}</td>
-    <td>{{ asset.reserve }}</td>
     <td>{{ asset.freeze }}</td>
+  </tr>
+  <tr>
+    <td>{{ asset.frozen }}</td>
+    <td>{{ asset.unit }}</td>
+    <td>{{ asset.decimals }}</td>
+    <td>{{ asset.metadata }}</td>
+    <td>{{ asset.reserve }}</td>
     <td>{{ asset.clawback }}</td>
   </tr>
   {% endfor %}
@@ -40,5 +36,6 @@
   {% else %}
   <p>There are no assets.</p>
   {% endif %}
+  <br>
   <a href="/create-asset/">Create asset</a>
 {% endblock %}
