--- a/mainapp/templates/mainapp/search.html
+++ b/mainapp/templates/mainapp/search.html
@@ -7,4 +7,10 @@
     <table>{{ form.as_table }}</table>
     <input type="submit" value="Submit">
   </form>
+  <br>
+  {% for transaction in transactions %}
+    {{ transaction }}
+    <br><br>
+  {% endfor %}
+
 {% endblock %}
