--- a/mainapp/templates/mainapp/create_asset.html
+++ b/mainapp/templates/mainapp/create_asset.html
@@ -5,6 +5,9 @@
   <form action="/create-asset/" method="post">
     {% csrf_token %}
     <table>{{ form.as_table }}</table>
-    <input type="submit" value="Submit">
+    <input type="submit" name="submit" value="Submit">
+    <br><br><hr>
+    <p><span style="color:red">WARNING: don't do this in production</span></p>
+    <input type="submit" name="retrieve_passphrase" value="Retrieve passphrase">
   </form>
 {% endblock %}
