--- a/mainapp/templates/mainapp/transfer_funds.html
+++ b/mainapp/templates/mainapp/transfer_funds.html
@@ -6,6 +6,9 @@
   <form action="/transfer-funds/{{ sender }}/" method="post">
     {% csrf_token %}
     <table>{{ form.as_table }}</table>
-    <input type="submit" value="Submit">
+    <input type="submit" name="submit" value="Submit">
+    <br><br><hr>
+    <p><span style="color:red">WARNING: don't do this in production</span></p>
+    <input type="submit" name="retrieve_passphrase" value="Retrieve passphrase">
   </form>
 {% endblock %}
